--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </article>
 </main>
 <footer>   
-    <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>.</p>
+    <p>Site criado por <a href="https://www.instagram.com/ayanebrigida/?utm_source=qr&igshid=YzU1NGVlODEzOA%3D%3D" target="_blank">Ayane Brígida</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>.</p>
 </footer>
 </body>
 </html>
